translation updates for OSX resources
git-svn-id: file:///home/awy/mirror/slim/7.6/branches/lms/platforms@32732 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Dutch.lproj/Localizable.strings
+++ b/osx/Preference Pane/Dutch.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 ﻿"Start Server" = "Start server";
 "Stop Server" = "Stop server";
-"Start Server Description" = "Klik op deze knop om de Squeezebox Server te starten. Nadat de server gestart is, hebben muzieksystemen toegang tot je muziekcollectie.";
-"Stop Server Description" = "Klik op deze knop om de Squeezebox Server te stoppen. Nadat de server gestopt is, hebben muzieksystemen geen toegang meer tot je muziekcollectie.";
+"Start Server Description" = "Klik op deze knop om de Logitech Media Server te starten. Nadat de server gestart is, hebben muzieksystemen toegang tot je muziekcollectie.";
+"Stop Server Description" = "Klik op deze knop om de Logitech Media Server te stoppen. Nadat de server gestopt is, hebben muzieksystemen geen toegang meer tot je muziekcollectie.";
 "Authorization Launch Error" = "Kan firmware niet updaten: bestand Update Firmware.sh ontbreekt.";
 "Expired Authorization Error" = "Kan firmware niet updaten: autorisatie verlopen.";
 "Firmware version" = "Firmwareversie %@.";
 "Firmware version invalid" = "Firmwareversie ongeldig.";
-"An updated Squeezebox Server version is available and ready to be installed." = "Er is een bijgewerkte versie van Squeezebox Server beschikbaar die direct geïnstalleerd kan worden.";
-"There's no updated Squeezebox Server version available." = "Er is geen bijgewerkte versie van Squeezebox Server beschikbaar.";
+"An updated Logitech Media Server version is available and ready to be installed." = "Er is een bijgewerkte versie van Logitech Media Server beschikbaar die direct geïnstalleerd kan worden.";
+"There's no updated Logitech Media Server version available." = "Er is geen bijgewerkte versie van Logitech Media Server beschikbaar.";
 "Check for update" = "Op update controleren";
 "Download update" = "Update downloaden";
 "Install update" = "Update installeren";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server moet worden stopgezet, voordat de opschoning wordt uitgevoerd. Wil je de server nu stoppen?";
+"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Logitech Media Server moet worden stopgezet, voordat de opschoning wordt uitgevoerd. Wil je de server nu stoppen?";
 "Run Cleanup" = "Opschoning uitvoeren";
 "Cancel" = "Annuleer";
 "Not now" = "Niet nu";
