--- a/osx/Preference Pane/Czech.lproj/Localizable.strings
+++ b/osx/Preference Pane/Czech.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 ﻿"Start Server" = "Spustit Server";
 "Stop Server" = "Zastavit Server";
-"Start Server Description" = "Ke spuštění Squeezebox Server klikněte na toto tlačítko. Po spuštění získají přehrávače přístup do vaší hudební knihovny.";
-"Stop Server Description" = "K zastavení Squeezebox Server klikněte na toto tlačítko. Po zastavení ztratí přehrávače přístup do vaší hudební knihovny.";
+"Start Server Description" = "Ke spuštění Logitech Media Server klikněte na toto tlačítko. Po spuštění získají přehrávače přístup do vaší hudební knihovny.";
+"Stop Server Description" = "K zastavení Logitech Media Server klikněte na toto tlačítko. Po zastavení ztratí přehrávače přístup do vaší hudební knihovny.";
 "Authorization Launch Error" = "Není možné aktualizovat firmware: chybějící soubor Update Firmware.sh.";
 "Expired Authorization Error" = "Není možné aktualizovat firmware: autorizace vypršela.";
 "Firmware version" = "Firmware verze %@.";
 "Firmware version invalid" = "Neplatná verze firmware.";
-"An updated Squeezebox Server version is available and ready to be installed." = "Aktualizovaná verze Squeezebox Server je k dispozici a připravena k instalaci.";
-"There's no updated Squeezebox Server version available." = "K dispozici není žádná aktualizovaná verze Squeezebox Server.";
+"An updated Logitech Media Server version is available and ready to be installed." = "Aktualizovaná verze Logitech Media Server je k dispozici a připravena k instalaci.";
+"There's no updated Logitech Media Server version available." = "K dispozici není žádná aktualizovaná verze Logitech Media Server.";
 "Check for update" = "Hledat aktualizace";
 "Download update" = "Stáhnout aktualizaci";
 "Install update" = "Instalovat aktualizaci";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Před zahájením čištění musí být Squeezebox Server zastaven. Chcete ho zastavit nyní?";
+"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Před zahájením čištění musí být Logitech Media Server zastaven. Chcete ho zastavit nyní?";
 "Run Cleanup" = "Spustit čištění";
 "Cancel" = "Storno";
 "Not now" = "Nyní ne";
