--- a/osx/Preference Pane/Danish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Danish.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 ﻿"Start Server" = "Start server";
 "Stop Server" = "Stop server";
-"Start Server Description" = "Klik på denne knap for at starte Squeezebox Server. Når den kører, får afspillerne adgang til dit musikbibliotek.";
-"Stop Server Description" = "Klik på denne knap for at stoppe Squeezebox Server. Når den er stoppet, har afspillerne ikke længere adgang til dit musikbibliotek.";
+"Start Server Description" = "Klik på denne knap for at starte Logitech Media Server. Når den kører, får afspillerne adgang til dit musikbibliotek.";
+"Stop Server Description" = "Klik på denne knap for at stoppe Logitech Media Server. Når den er stoppet, har afspillerne ikke længere adgang til dit musikbibliotek.";
 "Authorization Launch Error" = "Firmwaren kunne ikke opdateres: filen Update Firmware.sh mangler.";
 "Expired Authorization Error" = "Firmwaren kunne ikke opdateres: Godkendelsen er forældet.";
 "Firmware version" = "Firmwareversion %@.";
 "Firmware version invalid" = "Firmwareversionen er ugyldig.";
-"An updated Squeezebox Server version is available and ready to be installed." = "Der findes en opdateret version af Squeezebox Server som er klar til at blive installeret.";
-"There's no updated Squeezebox Server version available." = "Der findes ikke en nyere version af Squeezebox Server.";
+"An updated Logitech Media Server version is available and ready to be installed." = "Der findes en opdateret version af Logitech Media Server som er klar til at blive installeret.";
+"There's no updated Logitech Media Server version available." = "Der findes ikke en nyere version af Logitech Media Server.";
 "Check for update" = "Søg efter opdateringer";
 "Download update" = "Hent opdatering";
 "Install update" = "Installer opdatering";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server skal stoppes før der kan foretages en oprydning. Vil du stoppe den nu?";
+"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Logitech Media Server skal stoppes før der kan foretages en oprydning. Vil du stoppe den nu?";
 "Run Cleanup" = "Ryd op";
 "Cancel" = "Annuller";
 "Not now" = "Ikke nu";
