--- a/osx/Preference Pane/French.lproj/Localizable.strings
+++ b/osx/Preference Pane/French.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 ﻿"Start Server" = "Démarrer le serveur";
 "Stop Server" = "Arrêter le serveur";
-"Start Server Description" = "Cliquez sur ce bouton pour démarrer le Squeezebox Server. Une fois le serveur démarré, les platines pourront accéder à votre collection musicale.";
-"Stop Server Description" = "Cliquez sur ce bouton pour arrêter le Squeezebox Server. Une fois le serveur arrêté, les platines ne pourront pas accéder à votre collection musicale.";
+"Start Server Description" = "Cliquez sur ce bouton pour démarrer le Logitech Media Server. Une fois le serveur démarré, les platines pourront accéder à votre collection musicale.";
+"Stop Server Description" = "Cliquez sur ce bouton pour arrêter le Logitech Media Server. Une fois le serveur arrêté, les platines ne pourront pas accéder à votre collection musicale.";
 "Authorization Launch Error" = "Impossible de mettre à jour le micrologiciel: fichier Update Firmware.sh manquant.";
 "Expired Authorization Error" = "Impossible de mettre à jour le micrologiciel: l'autorisation a expiré.";
 "Firmware version" = "Version %@ du micrologiciel.";
 "Firmware version invalid" = "Version du micrologiciel non valide.";
-"An updated Squeezebox Server version is available and ready to be installed." = "Une nouvelle version du Squeezebox Server est disponible et prête à l'installation.";
-"There's no updated Squeezebox Server version available." = "Aucune nouvelle version du Squeezebox Server n'est disponible.";
+"An updated Logitech Media Server version is available and ready to be installed." = "Une nouvelle version du Logitech Media Server est disponible et prête à l'installation.";
+"There's no updated Logitech Media Server version available." = "Aucune nouvelle version du Logitech Media Server n'est disponible.";
 "Check for update" = "Rechercher les mises à jour";
 "Download update" = "Télécharger la mise à jour";
 "Install update" = "Installer la mise à jour";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Le Squeezebox Server doit être arrêté avant le lancement du nettoyage. Souhaitez-vous l'arrêter maintenant?";
+"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Le Logitech Media Server doit être arrêté avant le lancement du nettoyage. Souhaitez-vous l'arrêter maintenant?";
 "Run Cleanup" = "Lancer le nettoyage";
 "Cancel" = "Annuler";
 "Not now" = "Pas maintenant";
