--- a/osx/Preference Pane/Installer/Czech.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Czech.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 ﻿/* Localized versions of Info.plist keys */
 
-CFBundleName = "Squeezebox Server Installer";
+CFBundleName = "Logitech Media Server Installer";
 CFBundleShortVersionString = "7.6.0";
-CFBundleGetInfoString = "Squeezebox Server Installer verze 7.6.0, Copyright 2003-2011 Logitech";
+CFBundleGetInfoString = "Logitech Media Server Installer verze 7.6.0, Copyright 2003-2011 Logitech";
 NSHumanReadableCopyright = "Copyright 2003-2011 Logitech";
