--- a/osx/Preference Pane/Installer/Czech.lproj/Installer.strings
+++ b/osx/Preference Pane/Installer/Czech.lproj/Installer.strings
@@ -1,5 +1,5 @@
 ﻿/* NSMenuItem : <title:About SlimServer Installer> (oid:58) */
-"About Squeezebox server Installer" = "O Squeezebox Server Installer";
+"About Logitech Media Server Installer" = "O Logitech Media Server Installer";
 
 /* NSMenuItem : <title:Bring All to Front> (oid:5) */
 "Bring All to Front" = "Přenést vše na popředí";
@@ -10,8 +10,8 @@
 /* NSMenuItem : <title:Hide Others> (oid:145) */
 "Hide Others" = "Skrýt ostatní";
 
-/* NSMenuItem : <title:Hide Squeezebox server Installer> (oid:134) */
-"Hide Squeezebox server Installer" = "Skrýt Squeezebox Server Installer";
+/* NSMenuItem : <title:Hide Logitech Media Server Installer> (oid:134) */
+"Hide Logitech Media Server Installer" = "Skrýt Logitech Media Server Installer";
 
 /* NSButton (Install) : <title:Install> (oid:205) */
 "Install" = "Instalovat";
@@ -34,8 +34,8 @@
 /* NSButton (Quit) : <title:Quit> (oid:206) */
 "Quit" = "Ukončit";
 
-/* NSMenuItem : <title:Quit Squeezebox server Installer> (oid:136) */
-"Quit Squeezebox server Installer" = "Opustit Squeezebox Server Installer";
+/* NSMenuItem : <title:Quit Logitech Media Server Installer> (oid:136) */
+"Quit Logitech Media Server Installer" = "Opustit Logitech Media Server Installer";
 
 /* NSMenuItem : <title:Services> (oid:131) */
 "Services" = "Služby";
@@ -43,8 +43,8 @@
 /* NSMenuItem : <title:Show All> (oid:150) */
 "Show All" = "Zobrazit vše";
 
-/* NSMenu : <title:Squeezebox server Installer> (oid:57) */
-"Squeezebox server Installer" = "Squeezebox Server Installer";
+/* NSMenu : <title:Logitech Media Server Installer> (oid:57) */
+"Logitech Media Server Installer" = "Logitech Media Server Installer";
 
 /* NSMenuItem : <title:To All Users (requires authentication)> (oid:202) */
 "To All Users (requires authentication)" = "Pro všechny uživatele (vyžaduje autentizaci)";
@@ -59,12 +59,12 @@
 /* NSTextField (Waiting for the System Preferences application to quit...) : <title:Waiting for the System Preferences application to quit...> (oid:214) */
 "Waiting for the System Preferences application to quit..." = "Čekání na ukončení aplikace Systémové Preference...";
 
-/* NSTextField (Welcome to the Squeezebox server Installer.  This application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user.   Click Install to install the preference pane or click Quit to exit.) : <title:Welcome to the Squeezebox server Installer.
+/* NSTextField (Welcome to the Logitech Media Server Installer.  This application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user.   Click Install to install the preference pane or click Quit to exit.) : <title:Welcome to the Logitech Media Server Installer.
 
-This application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. 
+This application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. 
 
 Click Install to install the preference pane or click Quit to exit.> (oid:198) */
-"Welcome to the Squeezebox server Installer.\n\nThis application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Vítejte na Squeezebox Server Installer.\n\nTato aplikace instaluje Squeezebox Server pro použití se Systémovými Preferencemi.  Můžete si zvolit, jestli zpřístupníte panel preferencí pro všechny uživatele nebo pouze pro současného uživatele. \n\nKlikněte na Instalovat k instalaci panelu preferencí nebo klikněte na Zavřít pro odchod.";
+"Welcome to the Logitech Media Server Installer.\n\nThis application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Vítejte na Logitech Media Server Installer.\n\nTato aplikace instaluje Logitech Media Server pro použití se Systémovými Preferencemi.  Můžete si zvolit, jestli zpřístupníte panel preferencí pro všechny uživatele nebo pouze pro současného uživatele. \n\nKlikněte na Instalovat k instalaci panelu preferencí nebo klikněte na Zavřít pro odchod.";
 
 /* NSMenu : <title:Window> (oid:24) */
 "Window" = "Okno";
