--- a/osx/Preference Pane/Installer/Dutch.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Dutch.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 ﻿/* Localized versions of Info.plist keys */
 
-CFBundleName = "Installatieprogramma voor Squeezebox Server";
+CFBundleName = "Installatieprogramma voor Logitech Media Server";
 CFBundleShortVersionString = "7.6.0";
-CFBundleGetInfoString = "Installatieprogramma voor Squeezebox Server versie 7.6.0, Copyright 2003-2011 Logitech";
+CFBundleGetInfoString = "Installatieprogramma voor Logitech Media Server versie 7.6.0, Copyright 2003-2011 Logitech";
 NSHumanReadableCopyright = "Copyright 2003-2011 Logitech";
