--- a/osx/Preference Pane/Installer/Dutch.lproj/Installer.strings
+++ b/osx/Preference Pane/Installer/Dutch.lproj/Installer.strings
@@ -1,5 +1,5 @@
 ﻿/* NSMenuItem : <title:About SlimServer Installer> (oid:58) */
-"About Squeezebox server Installer" = "Installatieprogramma van Squeezebox Server";
+"About Logitech Media Server Installer" = "Installatieprogramma van Logitech Media Server";
 
 /* NSMenuItem : <title:Bring All to Front> (oid:5) */
 "Bring All to Front" = "Alles op voorgrond";
@@ -10,8 +10,8 @@
 /* NSMenuItem : <title:Hide Others> (oid:145) */
 "Hide Others" = "Verberg andere";
 
-/* NSMenuItem : <title:Hide Squeezebox server Installer> (oid:134) */
-"Hide Squeezebox server Installer" = "Installatieprogramma van Squeezebox Server verbergen";
+/* NSMenuItem : <title:Hide Logitech Media Server Installer> (oid:134) */
+"Hide Logitech Media Server Installer" = "Installatieprogramma van Logitech Media Server verbergen";
 
 /* NSButton (Install) : <title:Install> (oid:205) */
 "Install" = "Installeer";
@@ -34,8 +34,8 @@
 /* NSButton (Quit) : <title:Quit> (oid:206) */
 "Quit" = "Stoppen";
 
-/* NSMenuItem : <title:Quit Squeezebox server Installer> (oid:136) */
-"Quit Squeezebox server Installer" = "Installatieprogramma van Squeezebox Server sluiten";
+/* NSMenuItem : <title:Quit Logitech Media Server Installer> (oid:136) */
+"Quit Logitech Media Server Installer" = "Installatieprogramma van Logitech Media Server sluiten";
 
 /* NSMenuItem : <title:Services> (oid:131) */
 "Services" = "Services";
@@ -43,8 +43,8 @@
 /* NSMenuItem : <title:Show All> (oid:150) */
 "Show All" = "Toon alles";
 
-/* NSMenu : <title:Squeezebox server Installer> (oid:57) */
-"Squeezebox server Installer" = "Installatieprogramma voor Squeezebox Server";
+/* NSMenu : <title:Logitech Media Server Installer> (oid:57) */
+"Logitech Media Server Installer" = "Installatieprogramma voor Logitech Media Server";
 
 /* NSMenuItem : <title:To All Users (requires authentication)> (oid:202) */
 "To All Users (requires authentication)" = "Alle gebruikers (vereist autorisatie)";
@@ -59,12 +59,12 @@
 /* NSTextField (Waiting for the System Preferences application to quit...) : <title:Waiting for the System Preferences application to quit...> (oid:214) */
 "Waiting for the System Preferences application to quit..." = "Wachten tot 'Systeemvoorkeuren' gestopt is...";
 
-/* NSTextField (Welcome to the Squeezebox server Installer.  This application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user.   Click Install to install the preference pane or click Quit to exit.) : <title:Welcome to the Squeezebox server Installer.
+/* NSTextField (Welcome to the Logitech Media Server Installer.  This application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user.   Click Install to install the preference pane or click Quit to exit.) : <title:Welcome to the Logitech Media Server Installer.
 
-This application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. 
+This application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. 
 
 Click Install to install the preference pane or click Quit to exit.> (oid:198) */
-"Welcome to the Squeezebox server Installer.\n\nThis application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Welkom bij het installatieprogramma van Squeezebox Server.\n\nDit programma installeert Squeezebox Server voor gebruik met 'Systeemvoorkeuren'. Je kunt aangeven of het voorkeurenpaneel voor alle gebruikers of alleen de huidige gebruiker beschikbaar moet zijn. \n\nKlik op 'Installeren' om het paneel te installeren of op 'Sluiten' om af te sluiten.";
+"Welcome to the Logitech Media Server Installer.\n\nThis application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Welkom bij het installatieprogramma van Logitech Media Server.\n\nDit programma installeert Logitech Media Server voor gebruik met 'Systeemvoorkeuren'. Je kunt aangeven of het voorkeurenpaneel voor alle gebruikers of alleen de huidige gebruiker beschikbaar moet zijn. \n\nKlik op 'Installeren' om het paneel te installeren of op 'Sluiten' om af te sluiten.";
 
 /* NSMenu : <title:Window> (oid:24) */
 "Window" = "Venster";
