--- a/osx/Preference Pane/Installer/Dutch.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Dutch.lproj/Localizable.strings
@@ -2,10 +2,10 @@
 "Update" = "Update";
 "Install Results" = "Installatieresultaten";
 "OK" = "OK";
-"Squeezebox Server installed successfully.\n" = "Squeezebox Server is geïnstalleerd.";
-"Squeezebox Server install failed.\n" = "Installatie van Squeezebox Server is mislukt.";
-"You must have OS X 10.3 or later to run Squeezebox Server.\n" = "U moet OS X 10.3 of hoger hebben om Squeezebox Server uit te voeren.";
+"Logitech Media Server installed successfully.\n" = "Logitech Media Server is geïnstalleerd.";
+"Logitech Media Server install failed.\n" = "Installatie van Logitech Media Server is mislukt.";
+"You must have OS X 10.3 or later to run Logitech Media Server.\n" = "U moet OS X 10.3 of hoger hebben om Logitech Media Server uit te voeren.";
 "Mac OS X 10.3 Required" = "Mac OS X 10.3 vereist";
 "Please quit System Preferences before running the installer.\n" = "Please quit System Preferences before running the installer.\n";
-"Please stop Squeezebox Server before running the installer.\n" = "Please stop Squeezebox Server before running the installer.\n";
+"Please stop Logitech Media Server before running the installer.\n" = "Please stop Logitech Media Server before running the installer.\n";
 "Version x.y.z" = "Versie 7.6.0";
