--- a/osx/Preference Pane/Installer/Finnish.lproj/Installer.strings
+++ b/osx/Preference Pane/Installer/Finnish.lproj/Installer.strings
@@ -1,5 +1,5 @@
 ﻿/* NSMenuItem : <title:About SlimServer Installer> (oid:58) */
-"About Squeezebox server Installer" = "Tietoja Squeezebox Serverin asennusohjelmasta";
+"About Logitech Media Server Installer" = "Tietoja Logitech Media Serverin asennusohjelmasta";
 
 /* NSMenuItem : <title:Bring All to Front> (oid:5) */
 "Bring All to Front" = "Tuo kaikki eteen";
@@ -10,8 +10,8 @@
 /* NSMenuItem : <title:Hide Others> (oid:145) */
 "Hide Others" = "Piilota muut";
 
-/* NSMenuItem : <title:Hide Squeezebox server Installer> (oid:134) */
-"Hide Squeezebox server Installer" = "Piilota Squeezebox Serverin asennusohjelma";
+/* NSMenuItem : <title:Hide Logitech Media Server Installer> (oid:134) */
+"Hide Logitech Media Server Installer" = "Piilota Logitech Media Serverin asennusohjelma";
 
 /* NSButton (Install) : <title:Install> (oid:205) */
 "Install" = "Asenna";
@@ -34,8 +34,8 @@
 /* NSButton (Quit) : <title:Quit> (oid:206) */
 "Quit" = "Lopeta";
 
-/* NSMenuItem : <title:Quit Squeezebox server Installer> (oid:136) */
-"Quit Squeezebox server Installer" = "Lopeta Squeezebox Serverin asennusohjelma";
+/* NSMenuItem : <title:Quit Logitech Media Server Installer> (oid:136) */
+"Quit Logitech Media Server Installer" = "Lopeta Logitech Media Serverin asennusohjelma";
 
 /* NSMenuItem : <title:Services> (oid:131) */
 "Services" = "Palvelut";
@@ -43,8 +43,8 @@
 /* NSMenuItem : <title:Show All> (oid:150) */
 "Show All" = "Näytä kaikki";
 
-/* NSMenu : <title:Squeezebox server Installer> (oid:57) */
-"Squeezebox server Installer" = "Squeezebox Serverin asennusohjelma";
+/* NSMenu : <title:Logitech Media Server Installer> (oid:57) */
+"Logitech Media Server Installer" = "Logitech Media Serverin asennusohjelma";
 
 /* NSMenuItem : <title:To All Users (requires authentication)> (oid:202) */
 "To All Users (requires authentication)" = "Kaikille käyttäjille (vaatii todennuksen)";
@@ -59,12 +59,12 @@
 /* NSTextField (Waiting for the System Preferences application to quit...) : <title:Waiting for the System Preferences application to quit...> (oid:214) */
 "Waiting for the System Preferences application to quit..." = "Odotetaan, että Järjestelmäasetukset-sovellus suljetaan...";
 
-/* NSTextField (Welcome to the Squeezebox server Installer.  This application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user.   Click Install to install the preference pane or click Quit to exit.) : <title:Welcome to the Squeezebox server Installer.
+/* NSTextField (Welcome to the Logitech Media Server Installer.  This application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user.   Click Install to install the preference pane or click Quit to exit.) : <title:Welcome to the Logitech Media Server Installer.
 
-This application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. 
+This application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. 
 
 Click Install to install the preference pane or click Quit to exit.> (oid:198) */
-"Welcome to the Squeezebox server Installer.\n\nThis application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Tervetuloa Squeezebox Serverin asennusohjelmaan.\n\nTämä sovellus asentaa Squeezebox Serverin käytettäväksi Järjestelmäasetukset-kohdasta.  Voit valita, onko asetusruutu kaikkien käyttäjien vai vain nykyisen käyttäjän käytettävissä. \n\nAsenna asetusruutu valitsemalla Asenna tai poistu valitsemalla Lopeta.";
+"Welcome to the Logitech Media Server Installer.\n\nThis application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Tervetuloa Logitech Media Serverin asennusohjelmaan.\n\nTämä sovellus asentaa Logitech Media Serverin käytettäväksi Järjestelmäasetukset-kohdasta.  Voit valita, onko asetusruutu kaikkien käyttäjien vai vain nykyisen käyttäjän käytettävissä. \n\nAsenna asetusruutu valitsemalla Asenna tai poistu valitsemalla Lopeta.";
 
 /* NSMenu : <title:Window> (oid:24) */
 "Window" = "Ikkuna";
