--- a/osx/Preference Pane/Installer/Finnish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Finnish.lproj/Localizable.strings
@@ -2,10 +2,10 @@
 "Update" = "Päivitä";
 "Install Results" = "Asennustulokset";
 "OK" = "OK";
-"Squeezebox Server installed successfully.\n" = "Squeezebox Serverin asennus onnistui.";
-"Squeezebox Server install failed.\n" = "Squeezebox Serverin asennus epäonnistui.";
-"You must have OS X 10.3 or later to run Squeezebox Server.\n" = "Squeezebox Serverin käyttämiseen tarvitaan OS X -käyttöjärjestelmän versio 10.3 tai uudempi.";
+"Logitech Media Server installed successfully.\n" = "Logitech Media Serverin asennus onnistui.";
+"Logitech Media Server install failed.\n" = "Logitech Media Serverin asennus epäonnistui.";
+"You must have OS X 10.3 or later to run Logitech Media Server.\n" = "Logitech Media Serverin käyttämiseen tarvitaan OS X -käyttöjärjestelmän versio 10.3 tai uudempi.";
 "Mac OS X 10.3 Required" = "Vaaditaan Mac OS X 10.3";
 "Please quit System Preferences before running the installer.\n" = "Please quit System Preferences before running the installer.\n";
-"Please stop Squeezebox Server before running the installer.\n" = "Please stop Squeezebox Server before running the installer.\n";
+"Please stop Logitech Media Server before running the installer.\n" = "Please stop Logitech Media Server before running the installer.\n";
 "Version x.y.z" = "Versio 7.6.0";
