--- a/osx/Preference Pane/Installer/French.lproj/Installer.strings
+++ b/osx/Preference Pane/Installer/French.lproj/Installer.strings
@@ -1,5 +1,5 @@
 ﻿/* NSMenuItem : <title:About SlimServer Installer> (oid:58) */
-"About Squeezebox server Installer" = "A propos du programme d'installation du Squeezebox Server";
+"About Logitech Media Server Installer" = "A propos du programme d'installation du Logitech Media Server";
 
 /* NSMenuItem : <title:Bring All to Front> (oid:5) */
 "Bring All to Front" = "Tout au premier plan";
@@ -10,8 +10,8 @@
 /* NSMenuItem : <title:Hide Others> (oid:145) */
 "Hide Others" = "Masquer les autres";
 
-/* NSMenuItem : <title:Hide Squeezebox server Installer> (oid:134) */
-"Hide Squeezebox server Installer" = "Masquer le programme d'installation du Squeezebox Server";
+/* NSMenuItem : <title:Hide Logitech Media Server Installer> (oid:134) */
+"Hide Logitech Media Server Installer" = "Masquer le programme d'installation du Logitech Media Server";
 
 /* NSButton (Install) : <title:Install> (oid:205) */
 "Install" = "Installer";
@@ -34,8 +34,8 @@
 /* NSButton (Quit) : <title:Quit> (oid:206) */
 "Quit" = "Quitter";
 
-/* NSMenuItem : <title:Quit Squeezebox server Installer> (oid:136) */
-"Quit Squeezebox server Installer" = "Quitter le programme d'installation du Squeezebox Server";
+/* NSMenuItem : <title:Quit Logitech Media Server Installer> (oid:136) */
+"Quit Logitech Media Server Installer" = "Quitter le programme d'installation du Logitech Media Server";
 
 /* NSMenuItem : <title:Services> (oid:131) */
 "Services" = "Services";
@@ -43,8 +43,8 @@
 /* NSMenuItem : <title:Show All> (oid:150) */
 "Show All" = "Afficher tout";
 
-/* NSMenu : <title:Squeezebox server Installer> (oid:57) */
-"Squeezebox server Installer" = "Programme d'installation du Squeezebox Server";
+/* NSMenu : <title:Logitech Media Server Installer> (oid:57) */
+"Logitech Media Server Installer" = "Programme d'installation du Logitech Media Server";
 
 /* NSMenuItem : <title:To All Users (requires authentication)> (oid:202) */
 "To All Users (requires authentication)" = "A tous les utilisateurs (authentification requise)";
@@ -59,12 +59,12 @@
 /* NSTextField (Waiting for the System Preferences application to quit...) : <title:Waiting for the System Preferences application to quit...> (oid:214) */
 "Waiting for the System Preferences application to quit..." = "En attente de la fermeture de l'application Préférences système...";
 
-/* NSTextField (Welcome to the Squeezebox server Installer.  This application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user.   Click Install to install the preference pane or click Quit to exit.) : <title:Welcome to the Squeezebox server Installer.
+/* NSTextField (Welcome to the Logitech Media Server Installer.  This application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user.   Click Install to install the preference pane or click Quit to exit.) : <title:Welcome to the Logitech Media Server Installer.
 
-This application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. 
+This application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. 
 
 Click Install to install the preference pane or click Quit to exit.> (oid:198) */
-"Welcome to the Squeezebox server Installer.\n\nThis application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Bienvenue dans le programme d'installation du Squeezebox Server.\n\nCette application va installer le Squeezebox Server pour une utilisation avec les préférences système. Vous pouvez choisir de rendre le volet des préférences disponible à tous les utilisateurs ou seulement à l'utilisateur actuel. \n\nCliquez sur Installer pour installer le volet des préférences ou cliquez sur Quitter pour fermer le programme.";
+"Welcome to the Logitech Media Server Installer.\n\nThis application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Bienvenue dans le programme d'installation du Logitech Media Server.\n\nCette application va installer le Logitech Media Server pour une utilisation avec les préférences système. Vous pouvez choisir de rendre le volet des préférences disponible à tous les utilisateurs ou seulement à l'utilisateur actuel. \n\nCliquez sur Installer pour installer le volet des préférences ou cliquez sur Quitter pour fermer le programme.";
 
 /* NSMenu : <title:Window> (oid:24) */
 "Window" = "Fenêtre";
