--- a/osx/Preference Pane/Installer/German.lproj/Installer.strings
+++ b/osx/Preference Pane/Installer/German.lproj/Installer.strings
@@ -1,5 +1,5 @@
 ﻿/* NSMenuItem : <title:About SlimServer Installer> (oid:58) */
-"About Squeezebox server Installer" = "Infos zu Squeezebox Server Installer";
+"About Logitech Media Server Installer" = "Infos zu Logitech Media Server Installer";
 
 /* NSMenuItem : <title:Bring All to Front> (oid:5) */
 "Bring All to Front" = "Alle Fenster anzeigen";
@@ -10,8 +10,8 @@
 /* NSMenuItem : <title:Hide Others> (oid:145) */
 "Hide Others" = "Andere ausblenden";
 
-/* NSMenuItem : <title:Hide Squeezebox server Installer> (oid:134) */
-"Hide Squeezebox server Installer" = "Squeezebox Server Installer ausblenden";
+/* NSMenuItem : <title:Hide Logitech Media Server Installer> (oid:134) */
+"Hide Logitech Media Server Installer" = "Logitech Media Server Installer ausblenden";
 
 /* NSButton (Install) : <title:Install> (oid:205) */
 "Install" = "Installieren";
@@ -34,8 +34,8 @@
 /* NSButton (Quit) : <title:Quit> (oid:206) */
 "Quit" = "Beenden";
 
-/* NSMenuItem : <title:Quit Squeezebox server Installer> (oid:136) */
-"Quit Squeezebox server Installer" = "Squeezebox Server Installer beenden";
+/* NSMenuItem : <title:Quit Logitech Media Server Installer> (oid:136) */
+"Quit Logitech Media Server Installer" = "Logitech Media Server Installer beenden";
 
 /* NSMenuItem : <title:Services> (oid:131) */
 "Services" = "Dienste";
@@ -43,8 +43,8 @@
 /* NSMenuItem : <title:Show All> (oid:150) */
 "Show All" = "Alle anzeigen";
 
-/* NSMenu : <title:Squeezebox server Installer> (oid:57) */
-"Squeezebox server Installer" = "Squeezebox Server Installer";
+/* NSMenu : <title:Logitech Media Server Installer> (oid:57) */
+"Logitech Media Server Installer" = "Logitech Media Server Installer";
 
 /* NSMenuItem : <title:To All Users (requires authentication)> (oid:202) */
 "To All Users (requires authentication)" = "An alle Benutzer (Authentifizierung erforderlich)";
@@ -59,12 +59,12 @@
 /* NSTextField (Waiting for the System Preferences application to quit...) : <title:Waiting for the System Preferences application to quit...> (oid:214) */
 "Waiting for the System Preferences application to quit..." = "Warten auf Beendung der Systemeinstellungsanwendung...";
 
-/* NSTextField (Welcome to the Squeezebox server Installer.  This application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user.   Click Install to install the preference pane or click Quit to exit.) : <title:Welcome to the Squeezebox server Installer.
+/* NSTextField (Welcome to the Logitech Media Server Installer.  This application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user.   Click Install to install the preference pane or click Quit to exit.) : <title:Welcome to the Logitech Media Server Installer.
 
-This application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. 
+This application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. 
 
 Click Install to install the preference pane or click Quit to exit.> (oid:198) */
-"Welcome to the Squeezebox server Installer.\n\nThis application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Willkommen.\n\nDiese Anwendung installiert Squeezebox Server zur Verwendung mit den Systemeinstellungen.  Sie können die Einstellungen für alle oder nur den aktuellen Benutzer verfügbar machen. \n\nKlicken Sie auf 'Installieren', um den Einstellungsbereich zu installieren oder klicken Sie auf 'Beenden', um abzubrechen.";
+"Welcome to the Logitech Media Server Installer.\n\nThis application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Willkommen.\n\nDiese Anwendung installiert Logitech Media Server zur Verwendung mit den Systemeinstellungen.  Sie können die Einstellungen für alle oder nur den aktuellen Benutzer verfügbar machen. \n\nKlicken Sie auf 'Installieren', um den Einstellungsbereich zu installieren oder klicken Sie auf 'Beenden', um abzubrechen.";
 
 /* NSMenu : <title:Window> (oid:24) */
 "Window" = "Fenster";
