--- a/osx/Preference Pane/Installer/Russian.lproj/Installer.strings
+++ b/osx/Preference Pane/Installer/Russian.lproj/Installer.strings
@@ -1,5 +1,5 @@
 ﻿/* NSMenuItem : <title:About SlimServer Installer> (oid:58) */
-"About Squeezebox server Installer" = "Об установщике Squeezebox Server";
+"About Logitech Media Server Installer" = "Об установщике Logitech Media Server";
 
 /* NSMenuItem : <title:Bring All to Front> (oid:5) */
 "Bring All to Front" = "Переместить все вперед";
@@ -10,8 +10,8 @@
 /* NSMenuItem : <title:Hide Others> (oid:145) */
 "Hide Others" = "Скрыть остальное";
 
-/* NSMenuItem : <title:Hide Squeezebox server Installer> (oid:134) */
-"Hide Squeezebox server Installer" = "Скрыть установщик Squeezebox Server";
+/* NSMenuItem : <title:Hide Logitech Media Server Installer> (oid:134) */
+"Hide Logitech Media Server Installer" = "Скрыть установщик Logitech Media Server";
 
 /* NSButton (Install) : <title:Install> (oid:205) */
 "Install" = "Установить";
@@ -34,8 +34,8 @@
 /* NSButton (Quit) : <title:Quit> (oid:206) */
 "Quit" = "Выйти";
 
-/* NSMenuItem : <title:Quit Squeezebox server Installer> (oid:136) */
-"Quit Squeezebox server Installer" = "Выйти из установщика Squeezebox Server";
+/* NSMenuItem : <title:Quit Logitech Media Server Installer> (oid:136) */
+"Quit Logitech Media Server Installer" = "Выйти из установщика Logitech Media Server";
 
 /* NSMenuItem : <title:Services> (oid:131) */
 "Services" = "Службы";
@@ -43,8 +43,8 @@
 /* NSMenuItem : <title:Show All> (oid:150) */
 "Show All" = "Отобразить все";
 
-/* NSMenu : <title:Squeezebox server Installer> (oid:57) */
-"Squeezebox server Installer" = "Установщик Squeezebox Server";
+/* NSMenu : <title:Logitech Media Server Installer> (oid:57) */
+"Logitech Media Server Installer" = "Установщик Logitech Media Server";
 
 /* NSMenuItem : <title:To All Users (requires authentication)> (oid:202) */
 "To All Users (requires authentication)" = "Для всех пользователей (требуется проверка подлинности)";
@@ -59,12 +59,12 @@
 /* NSTextField (Waiting for the System Preferences application to quit...) : <title:Waiting for the System Preferences application to quit...> (oid:214) */
 "Waiting for the System Preferences application to quit..." = "Приложение System Preferences завершает работу...";
 
-/* NSTextField (Welcome to the Squeezebox server Installer.  This application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user.   Click Install to install the preference pane or click Quit to exit.) : <title:Welcome to the Squeezebox server Installer.
+/* NSTextField (Welcome to the Logitech Media Server Installer.  This application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user.   Click Install to install the preference pane or click Quit to exit.) : <title:Welcome to the Logitech Media Server Installer.
 
-This application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. 
+This application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. 
 
 Click Install to install the preference pane or click Quit to exit.> (oid:198) */
-"Welcome to the Squeezebox server Installer.\n\nThis application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Добро пожаловать в установщик Squeezebox Server.\n\nЭто приложение выполнит установку Squeezebox Server для работы с приложением System Preferences. Можно отобразить панель настроек для всех пользователей или только для текущего пользователя. \n\nДля установки панели настроек нажмите кнопку "Установить", для выхода — "Выход".";
+"Welcome to the Logitech Media Server Installer.\n\nThis application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Добро пожаловать в установщик Logitech Media Server.\n\nЭто приложение выполнит установку Logitech Media Server для работы с приложением System Preferences. Можно отобразить панель настроек для всех пользователей или только для текущего пользователя. \n\nДля установки панели настроек нажмите кнопку "Установить", для выхода — "Выход".";
 
 /* NSMenu : <title:Window> (oid:24) */
 "Window" = "Window";
