--- a/osx/Preference Pane/Installer/Swedish.lproj/Installer.strings
+++ b/osx/Preference Pane/Installer/Swedish.lproj/Installer.strings
@@ -1,5 +1,5 @@
 ﻿/* NSMenuItem : <title:About SlimServer Installer> (oid:58) */
-"About Squeezebox server Installer" = "Om installationsprogrammet för Squeezebox Server";
+"About Logitech Media Server Installer" = "Om installationsprogrammet för Logitech Media Server";
 
 /* NSMenuItem : <title:Bring All to Front> (oid:5) */
 "Bring All to Front" = "Visa alla framför";
@@ -10,8 +10,8 @@
 /* NSMenuItem : <title:Hide Others> (oid:145) */
 "Hide Others" = "Dölj andra";
 
-/* NSMenuItem : <title:Hide Squeezebox server Installer> (oid:134) */
-"Hide Squeezebox server Installer" = "Dölj installationsprogrammet för Squeezebox Server";
+/* NSMenuItem : <title:Hide Logitech Media Server Installer> (oid:134) */
+"Hide Logitech Media Server Installer" = "Dölj installationsprogrammet för Logitech Media Server";
 
 /* NSButton (Install) : <title:Install> (oid:205) */
 "Install" = "Installera";
@@ -34,8 +34,8 @@
 /* NSButton (Quit) : <title:Quit> (oid:206) */
 "Quit" = "Avsluta";
 
-/* NSMenuItem : <title:Quit Squeezebox server Installer> (oid:136) */
-"Quit Squeezebox server Installer" = "Avsluta installationsprogrammet för Squeezebox Server";
+/* NSMenuItem : <title:Quit Logitech Media Server Installer> (oid:136) */
+"Quit Logitech Media Server Installer" = "Avsluta installationsprogrammet för Logitech Media Server";
 
 /* NSMenuItem : <title:Services> (oid:131) */
 "Services" = "Tjänster";
@@ -43,8 +43,8 @@
 /* NSMenuItem : <title:Show All> (oid:150) */
 "Show All" = "Visa alla";
 
-/* NSMenu : <title:Squeezebox server Installer> (oid:57) */
-"Squeezebox server Installer" = "Installationsprogram för Squeezebox Server";
+/* NSMenu : <title:Logitech Media Server Installer> (oid:57) */
+"Logitech Media Server Installer" = "Installationsprogram för Logitech Media Server";
 
 /* NSMenuItem : <title:To All Users (requires authentication)> (oid:202) */
 "To All Users (requires authentication)" = "För alla användare (kräver autentisering)";
@@ -59,12 +59,12 @@
 /* NSTextField (Waiting for the System Preferences application to quit...) : <title:Waiting for the System Preferences application to quit...> (oid:214) */
 "Waiting for the System Preferences application to quit..." = "Väntar på att programmet Systeminställningar ska avslutas ...";
 
-/* NSTextField (Welcome to the Squeezebox server Installer.  This application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user.   Click Install to install the preference pane or click Quit to exit.) : <title:Welcome to the Squeezebox server Installer.
+/* NSTextField (Welcome to the Logitech Media Server Installer.  This application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user.   Click Install to install the preference pane or click Quit to exit.) : <title:Welcome to the Logitech Media Server Installer.
 
-This application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. 
+This application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. 
 
 Click Install to install the preference pane or click Quit to exit.> (oid:198) */
-"Welcome to the Squeezebox server Installer.\n\nThis application will install the Squeezebox server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Välkommen till installationsprogrammet för Squeezebox Server.\n\nProgrammet installerar Squeezebox Server för användning med Systeminställningar.  Du kan ange om installationsfönstret ska vara tillgängligt för alla användare eller endast för den aktuella användaren. \n\nKlicka på Installera för att installera fönstret eller på Avsluta för att stänga programmet.";
+"Welcome to the Logitech Media Server Installer.\n\nThis application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Välkommen till installationsprogrammet för Logitech Media Server.\n\nProgrammet installerar Logitech Media Server för användning med Systeminställningar.  Du kan ange om installationsfönstret ska vara tillgängligt för alla användare eller endast för den aktuella användaren. \n\nKlicka på Installera för att installera fönstret eller på Avsluta för att stänga programmet.";
 
 /* NSMenu : <title:Window> (oid:24) */
 "Window" = "Fönster";
