--- a/osx/Preference Pane/Norwegian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Norwegian.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 ﻿"Start Server" = "Start server";
 "Stop Server" = "Stopp server";
-"Start Server Description" = "Klikk på denne knappen for å starte Squeezebox Server. Spillerne får tilgang til musikkbiblioteket ditt når Squeezebox Server startes.";
-"Stop Server Description" = "Klikk på denne knappen for å stoppe Squeezebox Server. Spillerne har ikke tilgang til musikkbiblioteket ditt når Squeezebox Server er stoppet.";
+"Start Server Description" = "Klikk på denne knappen for å starte Logitech Media Server. Spillerne får tilgang til musikkbiblioteket ditt når Logitech Media Server startes.";
+"Stop Server Description" = "Klikk på denne knappen for å stoppe Logitech Media Server. Spillerne har ikke tilgang til musikkbiblioteket ditt når Logitech Media Server er stoppet.";
 "Authorization Launch Error" = "Kunne ikke oppdatere fastvaren: filen Update Firmware.sh mangler.";
 "Expired Authorization Error" = "Kunne ikke oppdatere fastvare: autorisasjonen har utløpt.";
 "Firmware version" = "Fastvareversjon %@.";
 "Firmware version invalid" = "Ugyldig fastvareversjon.";
-"An updated Squeezebox Server version is available and ready to be installed." = "En oppdatert versjon av Squeezebox Server er tilgjengelig og klar til installering.";
-"There's no updated Squeezebox Server version available." = "Det finnes ingen oppdatert versjon av Squeezebox Server tilgjengelig.";
+"An updated Logitech Media Server version is available and ready to be installed." = "En oppdatert versjon av Logitech Media Server er tilgjengelig og klar til installering.";
+"There's no updated Logitech Media Server version available." = "Det finnes ingen oppdatert versjon av Logitech Media Server tilgjengelig.";
 "Check for update" = "Se etter oppdatering";
 "Download update" = "Last ned oppdatering";
 "Install update" = "Installer oppdatering";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server må stoppes før oppryddingen kan kjøres. Vil du stoppe den nå?";
+"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Logitech Media Server må stoppes før oppryddingen kan kjøres. Vil du stoppe den nå?";
 "Run Cleanup" = "Kjør opprydding";
 "Cancel" = "Avbryt";
 "Not now" = "Ikke nå";
