--- a/osx/Preference Pane/Swedish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Swedish.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
 ﻿/* Localized versions of Info.plist keys */
 
-CFBundleName = "Squeezebox Server";
+CFBundleName = "Logitech Media Server";
 CFBundleShortVersionString = "7.6.0";
-CFBundleGetInfoString = "Squeezebox Server version 7.6.0, © 2002–2011 Logitech";
+CFBundleGetInfoString = "Logitech Media Server version 7.6.0, © 2002–2011 Logitech";
 NSHumanReadableCopyright = "© 2002–2011 Logitech";
-NSPrefPaneIconLabel = "Squeezebox\nServer";
+NSPrefPaneIconLabel = "Logitech\nMedia Server";
