I hate localizing XCode projects...
git-svn-id: file:///home/awy/mirror/slim/7.6/branches/lms/platforms@32807 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Installer/Norwegian.lproj/Installer.strings
+++ b/osx/Preference Pane/Installer/Norwegian.lproj/Installer.strings
@@ -1,4 +1,4 @@
-﻿/* NSMenuItem : <title:About SlimServer Installer> (oid:58) */
+﻿/* NSMenuItem : <title:About Logitech Media Server Installer> (oid:58) */
 "About Logitech Media Server Installer" = "Om installasjonsprogrammet for Logitech Media Server";
 
 /* NSMenuItem : <title:Bring All to Front> (oid:5) */
