--- a/osx/Preference Pane/Installer/Italian.lproj/Installer.strings
+++ b/osx/Preference Pane/Installer/Italian.lproj/Installer.strings
@@ -1,4 +1,4 @@
-﻿/* NSMenuItem : <title:About SlimServer Installer> (oid:58) */
+﻿/* NSMenuItem : <title:About Logitech Media Installer> (oid:58) */
 "About Logitech Media Server Installer" = "Informazioni sul programma di installazione di Logitech Media Server";
 
 /* NSMenuItem : <title:Bring All to Front> (oid:5) */
