--- a/osx/Preference Pane/Installer/Danish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Danish.lproj/InfoPlist.strings
@@ -3,9 +3,4 @@
 CFBundleName = "Installationsprogram til Squeezebox Server";
 CFBundleShortVersionString = "7.6.0";
 CFBundleGetInfoString = "Installationsprogram til  Squeezebox Server version 7.6.0. Copyright 2003-2011 Logitech";
-NSHumanReadableCopyright = "Copyright 2003-2011 Logitech";==== ORIGINAL VERSION platforms/osx/Preference Pane/Installer/Danish.lproj/InfoPlist.strings 131158207337377
-CFBundleShortVersionString = "7.5.5";
-CFBundleGetInfoString = "Installationsprogram til  Squeezebox Server version 7.5.5. Copyright 2003-2010 Logitech";
-NSHumanReadableCopyright = "Copyright 2003-2010 Logitech";==== THEIR VERSION platforms/osx/Preference Pane/Installer/Danish.lproj/InfoPlist.strings (/sbs/slim/7.5/trunk) 131158207337377
-CFBundleShortVersionString = "7.5.6";
-CFBundleGetInfoString = "Installationsprogram til  Squeezebox Server version 7.5.6. Copyright 2003-2010 Logitech";
+NSHumanReadableCopyright = "Copyright 2003-2011 Logitech";
